clusters/corpus/apps/media/filebrowser/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: filebrowser
  namespace: media
spec:
  serviceName: filebrowser
  replicas: 0 # active nas
  selector:
    matchLabels:
      app: filebrowser
  template:
    metadata:
      labels:
        app: filebrowser
    spec:
      containers:
        - name: filebrowser
          image: filebrowser/filebrowser:v2
          # commented out because alpine v 3.15 doesn't have packages built yet
          # util-linux has rename
          # command: # ["sh","-c","tail -f /dev/null"]
          # - sh
          # - -c
          # - >
          #   apk add
          #   mktorrent
          #   unrar
          #   util-linux
          #   &&
          #   /filebrowser -d /db/database.db
          command: ["/filebrowser", "-d", "/db/database.db"]
          volumeMounts:
            - name: filebrowser-config
              mountPath: /db
            - name: media
              mountPath: /srv/media
            - name: media
              subPath: shared
              mountPath: /srv/shared
          resources:
            requests:
              cpu: "50m"
            limits:
              memory: "2Gi" # keep this high so fb can accommodate larger files
          ports:
            - containerPort: 80
      volumes:
        - name: filebrowser-config
          persistentVolumeClaim:
            claimName: filebrowser-config-nas
        - name: media
          persistentVolumeClaim:
            claimName: nas-volume1-media
