clusters/corpus/apps/media/filebrowser/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: filebrowser
  namespace: media
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-body-size: "40g"
    # nginx.ingress.kubernetes.io/auth-url: "http://filebrowser-oauth2-proxy.media.svc.cluster.local/oauth2/auth"
    # nginx.ingress.kubernetes.io/auth-signin: "https://$host/oauth2/start?rd=$escaped_request_uri"
    external-dns.kubernetes.io/cloudflare-proxied: "false"
    external-dns.kubernetes.io/target: ${personal_services_ip}
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - &host "files.${public_services_domain}"
      secretName: *host
  rules:
    - host: *host
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: filebrowser
                port:
                  number: 80
# ---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: filebrowser-oauth2-proxy
#   namespace: media
#   annotations:
#     cert-manager.io/cluster-issuer: letsencrypt
#     external-dns.kubernetes.io/exclude: "true"
#   labels:
#     use-cloudflare-dns-solver: "true"
# spec:
#   ingressClassName: nginx
#   tls:
#     - hosts:
#         - &host "files.${public_services_domain}"
#       secretName: *host
#   rules:
#     - host: *host
#       http:
#         paths:
#           - path: /oauth2
#             pathType: Prefix
#             backend:
#               service:
#                 name: filebrowser-oauth2-proxy
#                 port:
#                   number: 80
